Attempting to debug responsive layout issues on browser

--- a/layout.css
+++ b/layout.css
@@ -15,7 +15,16 @@ body {
   font-family: 'JetBrains Mono', monospace;
   color: var(--navbg-bodytext-color);
   background-color: var(--bodybg-navtitle-color);
+  display: flex;
+  flex-direction: row;
 }
 
-@media screen and (max-width: 45rem) {
+/* #navbar {
+  height: 100%;
+} */
+
+@media screen and (min-width: 1500px) {
+  #navbar {
+    height: 100%;
+  }
 }
