--- a/main-content.css
+++ b/main-content.css
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 0 1rem 1rem 21rem;
+  margin: 0 1rem 1rem 1rem;
 }
 .h1 {
   background-color: var(--headerbg-navtext-color);
